[gd_scene load_steps=145 format=2]

[ext_resource path="res://Nowhere/Portal.gd" type="Script" id=1]
[ext_resource path="res://Nowhere/Sprites/Portal_Turn.sprites/final-080.tres" type="Texture" id=2]
[ext_resource path="res://Nowhere/Sprites/Portal_Turn.sprites/final-081.tres" type="Texture" id=3]
[ext_resource path="res://Nowhere/Sprites/Portal_Turn.sprites/final-082.tres" type="Texture" id=4]
[ext_resource path="res://Nowhere/Sprites/Portal_Turn.sprites/final-083.tres" type="Texture" id=5]
[ext_resource path="res://Nowhere/Sprites/Portal_Turn.sprites/final-084.tres" type="Texture" id=6]
[ext_resource path="res://Nowhere/Sprites/Portal_Turn.sprites/final-085.tres" type="Texture" id=7]
[ext_resource path="res://Nowhere/Sprites/Portal_Turn.sprites/final-086.tres" type="Texture" id=8]
[ext_resource path="res://Nowhere/Sprites/Portal_Turn.sprites/final-087.tres" type="Texture" id=9]
[ext_resource path="res://Nowhere/Sprites/Portal_Turn.sprites/final-088.tres" type="Texture" id=10]
[ext_resource path="res://Nowhere/Sprites/Portal_Turn.sprites/final-089.tres" type="Texture" id=11]
[ext_resource path="res://Nowhere/Sprites/Portal_Turn.sprites/final-090.tres" type="Texture" id=12]
[ext_resource path="res://Nowhere/Sprites/Portal_Turn.sprites/final-091.tres" type="Texture" id=13]
[ext_resource path="res://Nowhere/Sprites/Portal_Turn.sprites/final-092.tres" type="Texture" id=14]
[ext_resource path="res://Nowhere/Sprites/Portal_Turn.sprites/final-093.tres" type="Texture" id=15]
[ext_resource path="res://Nowhere/Sprites/Portal_Turn.sprites/final-094.tres" type="Texture" id=16]
[ext_resource path="res://Nowhere/Sprites/Portal_Turn.sprites/final-095.tres" type="Texture" id=17]
[ext_resource path="res://Nowhere/Sprites/Portal_Turn.sprites/final-096.tres" type="Texture" id=18]
[ext_resource path="res://Nowhere/Sprites/Portal_Turn.sprites/final-097.tres" type="Texture" id=19]
[ext_resource path="res://Nowhere/Sprites/Portal_Turn.sprites/final-098.tres" type="Texture" id=20]
[ext_resource path="res://Nowhere/Sprites/Portal_Turn.sprites/final-099.tres" type="Texture" id=21]
[ext_resource path="res://Nowhere/Sprites/Portal_Turn.sprites/final-100.tres" type="Texture" id=22]
[ext_resource path="res://Nowhere/Sprites/Portal_Turn.sprites/final-101.tres" type="Texture" id=23]
[ext_resource path="res://Nowhere/Sprites/Portal_Turn.sprites/final-102.tres" type="Texture" id=24]
[ext_resource path="res://Nowhere/Sprites/Portal_Turn.sprites/final-103.tres" type="Texture" id=25]
[ext_resource path="res://Nowhere/Sprites/Portal_Turn.sprites/final-104.tres" type="Texture" id=26]
[ext_resource path="res://Nowhere/Sprites/Portal_Turn.sprites/final-105.tres" type="Texture" id=27]
[ext_resource path="res://Nowhere/Sprites/Portal_Turn.sprites/final-106.tres" type="Texture" id=28]
[ext_resource path="res://Nowhere/Sprites/Portal_Turn.sprites/final-107.tres" type="Texture" id=29]
[ext_resource path="res://Nowhere/Sprites/Portal_Turn.sprites/final-108.tres" type="Texture" id=30]
[ext_resource path="res://Nowhere/Sprites/Portal_Turn.sprites/final-109.tres" type="Texture" id=31]
[ext_resource path="res://Nowhere/Sprites/Portal_Turn.sprites/final-110.tres" type="Texture" id=32]
[ext_resource path="res://Nowhere/Sprites/Portal_Turn.sprites/final-111.tres" type="Texture" id=33]
[ext_resource path="res://Nowhere/Sprites/Portal_Turn.sprites/final-112.tres" type="Texture" id=34]
[ext_resource path="res://Nowhere/Sprites/Portal_Turn.sprites/final-113.tres" type="Texture" id=35]
[ext_resource path="res://Nowhere/Sprites/Portal_Turn.sprites/final-114.tres" type="Texture" id=36]
[ext_resource path="res://Nowhere/Sprites/Portal_Turn.sprites/final-115.tres" type="Texture" id=37]
[ext_resource path="res://Nowhere/Sprites/Portal_Turn.sprites/final-116.tres" type="Texture" id=38]
[ext_resource path="res://Nowhere/Sprites/Portal_Turn.sprites/final-117.tres" type="Texture" id=39]
[ext_resource path="res://Nowhere/Sprites/Portal_Turn.sprites/final-118.tres" type="Texture" id=40]
[ext_resource path="res://Nowhere/Sprites/Portal_Turn.sprites/final-119.tres" type="Texture" id=41]
[ext_resource path="res://Nowhere/Sprites/Portal_Turn.sprites/final-120.tres" type="Texture" id=42]
[ext_resource path="res://Nowhere/Sprites/Portal_Turn.sprites/final-121.tres" type="Texture" id=43]
[ext_resource path="res://Nowhere/Sprites/Portal_Turn.sprites/final-122.tres" type="Texture" id=44]
[ext_resource path="res://Nowhere/Sprites/Portal_Turn.sprites/final-123.tres" type="Texture" id=45]
[ext_resource path="res://Nowhere/Sprites/Portal_Turn.sprites/final-124.tres" type="Texture" id=46]
[ext_resource path="res://Nowhere/Sprites/Portal_Turn.sprites/final-125.tres" type="Texture" id=47]
[ext_resource path="res://Nowhere/Sprites/Portal_Turn.sprites/final-126.tres" type="Texture" id=48]
[ext_resource path="res://Nowhere/Sprites/Portal_Turn.sprites/final-127.tres" type="Texture" id=49]
[ext_resource path="res://Nowhere/Sprites/Portal_Turn.sprites/final-128.tres" type="Texture" id=50]
[ext_resource path="res://Nowhere/Sprites/Portal_Turn.sprites/final-129.tres" type="Texture" id=51]
[ext_resource path="res://Nowhere/Sprites/Portal_Turn.sprites/final-130.tres" type="Texture" id=52]
[ext_resource path="res://Nowhere/Sprites/Portal_Turn.sprites/final-131.tres" type="Texture" id=53]
[ext_resource path="res://Nowhere/Sprites/Portal_Turn.sprites/final-132.tres" type="Texture" id=54]
[ext_resource path="res://Nowhere/Sprites/Portal_Turn.sprites/final-133.tres" type="Texture" id=55]
[ext_resource path="res://Nowhere/Sprites/Portal_Turn.sprites/final-134.tres" type="Texture" id=56]
[ext_resource path="res://Nowhere/Sprites/Portal_Turn.sprites/final-135.tres" type="Texture" id=57]
[ext_resource path="res://Nowhere/Sprites/Portal_Turn.sprites/final-136.tres" type="Texture" id=58]
[ext_resource path="res://Nowhere/Sprites/Portal_Turn.sprites/final-137.tres" type="Texture" id=59]
[ext_resource path="res://Nowhere/Sprites/Portal_Turn.sprites/final-138.tres" type="Texture" id=60]
[ext_resource path="res://Nowhere/Sprites/Portal_Turn.sprites/final-139.tres" type="Texture" id=61]
[ext_resource path="res://Nowhere/Sprites/Portal_Born.sprites/final-001.tres" type="Texture" id=62]
[ext_resource path="res://Nowhere/Sprites/Portal_Born.sprites/final-002.tres" type="Texture" id=63]
[ext_resource path="res://Nowhere/Sprites/Portal_Born.sprites/final-003.tres" type="Texture" id=64]
[ext_resource path="res://Nowhere/Sprites/Portal_Born.sprites/final-004.tres" type="Texture" id=65]
[ext_resource path="res://Nowhere/Sprites/Portal_Born.sprites/final-005.tres" type="Texture" id=66]
[ext_resource path="res://Nowhere/Sprites/Portal_Born.sprites/final-006.tres" type="Texture" id=67]
[ext_resource path="res://Nowhere/Sprites/Portal_Born.sprites/final-007.tres" type="Texture" id=68]
[ext_resource path="res://Nowhere/Sprites/Portal_Born.sprites/final-008.tres" type="Texture" id=69]
[ext_resource path="res://Nowhere/Sprites/Portal_Born.sprites/final-009.tres" type="Texture" id=70]
[ext_resource path="res://Nowhere/Sprites/Portal_Born.sprites/final-010.tres" type="Texture" id=71]
[ext_resource path="res://Nowhere/Sprites/Portal_Born.sprites/final-011.tres" type="Texture" id=72]
[ext_resource path="res://Nowhere/Sprites/Portal_Born.sprites/final-012.tres" type="Texture" id=73]
[ext_resource path="res://Nowhere/Sprites/Portal_Born.sprites/final-013.tres" type="Texture" id=74]
[ext_resource path="res://Nowhere/Sprites/Portal_Born.sprites/final-014.tres" type="Texture" id=75]
[ext_resource path="res://Nowhere/Sprites/Portal_Born.sprites/final-015.tres" type="Texture" id=76]
[ext_resource path="res://Nowhere/Sprites/Portal_Born.sprites/final-016.tres" type="Texture" id=77]
[ext_resource path="res://Nowhere/Sprites/Portal_Born.sprites/final-017.tres" type="Texture" id=78]
[ext_resource path="res://Nowhere/Sprites/Portal_Born.sprites/final-018.tres" type="Texture" id=79]
[ext_resource path="res://Nowhere/Sprites/Portal_Born.sprites/final-019.tres" type="Texture" id=80]
[ext_resource path="res://Nowhere/Sprites/Portal_Born.sprites/final-020.tres" type="Texture" id=81]
[ext_resource path="res://Nowhere/Sprites/Portal_Born.sprites/final-021.tres" type="Texture" id=82]
[ext_resource path="res://Nowhere/Sprites/Portal_Born.sprites/final-022.tres" type="Texture" id=83]
[ext_resource path="res://Nowhere/Sprites/Portal_Born.sprites/final-023.tres" type="Texture" id=84]
[ext_resource path="res://Nowhere/Sprites/Portal_Born.sprites/final-024.tres" type="Texture" id=85]
[ext_resource path="res://Nowhere/Sprites/Portal_Born.sprites/final-025.tres" type="Texture" id=86]
[ext_resource path="res://Nowhere/Sprites/Portal_Born.sprites/final-026.tres" type="Texture" id=87]
[ext_resource path="res://Nowhere/Sprites/Portal_Born.sprites/final-027.tres" type="Texture" id=88]
[ext_resource path="res://Nowhere/Sprites/Portal_Born.sprites/final-028.tres" type="Texture" id=89]
[ext_resource path="res://Nowhere/Sprites/Portal_Born.sprites/final-029.tres" type="Texture" id=90]
[ext_resource path="res://Nowhere/Sprites/Portal_Born.sprites/final-030.tres" type="Texture" id=91]
[ext_resource path="res://Nowhere/Sprites/Portal_Born.sprites/final-031.tres" type="Texture" id=92]
[ext_resource path="res://Nowhere/Sprites/Portal_Born.sprites/final-032.tres" type="Texture" id=93]
[ext_resource path="res://Nowhere/Sprites/Portal_Born.sprites/final-033.tres" type="Texture" id=94]
[ext_resource path="res://Nowhere/Sprites/Portal_Born.sprites/final-034.tres" type="Texture" id=95]
[ext_resource path="res://Nowhere/Sprites/Portal_Born.sprites/final-035.tres" type="Texture" id=96]
[ext_resource path="res://Nowhere/Sprites/Portal_Born.sprites/final-036.tres" type="Texture" id=97]
[ext_resource path="res://Nowhere/Sprites/Portal_Born.sprites/final-037.tres" type="Texture" id=98]
[ext_resource path="res://Nowhere/Sprites/Portal_Born.sprites/final-038.tres" type="Texture" id=99]
[ext_resource path="res://Nowhere/Sprites/Portal_Born.sprites/final-039.tres" type="Texture" id=100]
[ext_resource path="res://Nowhere/Sprites/Portal_Born.sprites/final-040.tres" type="Texture" id=101]
[ext_resource path="res://Nowhere/Sprites/Portal_Born.sprites/final-041.tres" type="Texture" id=102]
[ext_resource path="res://Nowhere/Sprites/Portal_Born.sprites/final-042.tres" type="Texture" id=103]
[ext_resource path="res://Nowhere/Sprites/Portal_Born.sprites/final-043.tres" type="Texture" id=104]
[ext_resource path="res://Nowhere/Sprites/Portal_Born.sprites/final-044.tres" type="Texture" id=105]
[ext_resource path="res://Nowhere/Sprites/Portal_Born.sprites/final-045.tres" type="Texture" id=106]
[ext_resource path="res://Nowhere/Sprites/Portal_Born.sprites/final-046.tres" type="Texture" id=107]
[ext_resource path="res://Nowhere/Sprites/Portal_Born.sprites/final-047.tres" type="Texture" id=108]
[ext_resource path="res://Nowhere/Sprites/Portal_Born.sprites/final-048.tres" type="Texture" id=109]
[ext_resource path="res://Nowhere/Sprites/Portal_Born.sprites/final-049.tres" type="Texture" id=110]
[ext_resource path="res://Nowhere/Sprites/Portal_Born.sprites/final-050.tres" type="Texture" id=111]
[ext_resource path="res://Nowhere/Sprites/Portal_Born.sprites/final-051.tres" type="Texture" id=112]
[ext_resource path="res://Nowhere/Sprites/Portal_Born.sprites/final-052.tres" type="Texture" id=113]
[ext_resource path="res://Nowhere/Sprites/Portal_Born.sprites/final-053.tres" type="Texture" id=114]
[ext_resource path="res://Nowhere/Sprites/Portal_Born.sprites/final-054.tres" type="Texture" id=115]
[ext_resource path="res://Nowhere/Sprites/Portal_Born.sprites/final-055.tres" type="Texture" id=116]
[ext_resource path="res://Nowhere/Sprites/Portal_Born.sprites/final-056.tres" type="Texture" id=117]
[ext_resource path="res://Nowhere/Sprites/Portal_Born.sprites/final-057.tres" type="Texture" id=118]
[ext_resource path="res://Nowhere/Sprites/Portal_Born.sprites/final-058.tres" type="Texture" id=119]
[ext_resource path="res://Nowhere/Sprites/Portal_Born.sprites/final-059.tres" type="Texture" id=120]
[ext_resource path="res://Nowhere/Sprites/Portal_Born.sprites/final-060.tres" type="Texture" id=121]
[ext_resource path="res://Nowhere/Sprites/Portal_Born.sprites/final-061.tres" type="Texture" id=122]
[ext_resource path="res://Nowhere/Sprites/Portal_Born.sprites/final-062.tres" type="Texture" id=123]
[ext_resource path="res://Nowhere/Sprites/Portal_Born.sprites/final-063.tres" type="Texture" id=124]
[ext_resource path="res://Nowhere/Sprites/Portal_Born.sprites/final-064.tres" type="Texture" id=125]
[ext_resource path="res://Nowhere/Sprites/Portal_Born.sprites/final-065.tres" type="Texture" id=126]
[ext_resource path="res://Nowhere/Sprites/Portal_Born.sprites/final-066.tres" type="Texture" id=127]
[ext_resource path="res://Nowhere/Sprites/Portal_Born.sprites/final-067.tres" type="Texture" id=128]
[ext_resource path="res://Nowhere/Sprites/Portal_Born.sprites/final-068.tres" type="Texture" id=129]
[ext_resource path="res://Nowhere/Sprites/Portal_Born.sprites/final-069.tres" type="Texture" id=130]
[ext_resource path="res://Nowhere/Sprites/Portal_Born.sprites/final-070.tres" type="Texture" id=131]
[ext_resource path="res://Nowhere/Sprites/Portal_Born.sprites/final-071.tres" type="Texture" id=132]
[ext_resource path="res://Nowhere/Sprites/Portal_Born.sprites/final-072.tres" type="Texture" id=133]
[ext_resource path="res://Nowhere/Sprites/Portal_Born.sprites/final-073.tres" type="Texture" id=134]
[ext_resource path="res://Nowhere/Sprites/Portal_Born.sprites/final-074.tres" type="Texture" id=135]
[ext_resource path="res://Nowhere/Sprites/Portal_Born.sprites/final-075.tres" type="Texture" id=136]
[ext_resource path="res://Nowhere/Sprites/Portal_Born.sprites/final-076.tres" type="Texture" id=137]
[ext_resource path="res://Nowhere/Sprites/Portal_Born.sprites/final-077.tres" type="Texture" id=138]
[ext_resource path="res://Nowhere/Sprites/Portal_Born.sprites/final-078.tres" type="Texture" id=139]
[ext_resource path="res://Nowhere/Sprites/Portal_Born.sprites/final-079.tres" type="Texture" id=140]
[ext_resource path="res://Nowhere/Sprites/potions_mask.png" type="Texture" id=141]

[sub_resource type="Animation" id=1]
resource_name = "OpenPortal"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.0106011, 0.1, 0.3 ),
"transitions": PoolRealArray( 2, 2, 1 ),
"update": 0,
"values": [ Vector2( 0.1, 0.1 ), Vector2( 0.1, 0.1 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "SpitPotions"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 2, 0.5, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.8, 1 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 41 ), ExtResource( 42 ), ExtResource( 43 ), ExtResource( 44 ), ExtResource( 45 ), ExtResource( 46 ), ExtResource( 47 ), ExtResource( 48 ), ExtResource( 49 ), ExtResource( 50 ), ExtResource( 51 ), ExtResource( 52 ), ExtResource( 53 ), ExtResource( 54 ), ExtResource( 55 ), ExtResource( 56 ), ExtResource( 57 ), ExtResource( 58 ), ExtResource( 59 ), ExtResource( 60 ), ExtResource( 61 ) ],
"loop": true,
"name": "Turn",
"speed": 30.0
}, {
"frames": [ ExtResource( 62 ), ExtResource( 63 ), ExtResource( 64 ), ExtResource( 65 ), ExtResource( 66 ), ExtResource( 67 ), ExtResource( 68 ), ExtResource( 69 ), ExtResource( 70 ), ExtResource( 71 ), ExtResource( 72 ), ExtResource( 73 ), ExtResource( 74 ), ExtResource( 75 ), ExtResource( 76 ), ExtResource( 77 ), ExtResource( 78 ), ExtResource( 79 ), ExtResource( 80 ), ExtResource( 81 ), ExtResource( 82 ), ExtResource( 83 ), ExtResource( 84 ), ExtResource( 85 ), ExtResource( 86 ), ExtResource( 87 ), ExtResource( 88 ), ExtResource( 89 ), ExtResource( 90 ), ExtResource( 91 ), ExtResource( 92 ), ExtResource( 93 ), ExtResource( 94 ), ExtResource( 95 ), ExtResource( 96 ), ExtResource( 97 ), ExtResource( 98 ), ExtResource( 99 ), ExtResource( 100 ), ExtResource( 101 ), ExtResource( 102 ), ExtResource( 103 ), ExtResource( 104 ), ExtResource( 105 ), ExtResource( 106 ), ExtResource( 107 ), ExtResource( 108 ), ExtResource( 109 ), ExtResource( 110 ), ExtResource( 111 ), ExtResource( 112 ), ExtResource( 113 ), ExtResource( 114 ), ExtResource( 115 ), ExtResource( 116 ), ExtResource( 117 ), ExtResource( 118 ), ExtResource( 119 ), ExtResource( 120 ), ExtResource( 121 ), ExtResource( 122 ), ExtResource( 123 ), ExtResource( 124 ), ExtResource( 125 ), ExtResource( 126 ), ExtResource( 127 ), ExtResource( 128 ), ExtResource( 129 ), ExtResource( 130 ), ExtResource( 131 ), ExtResource( 132 ), ExtResource( 133 ), ExtResource( 134 ), ExtResource( 135 ), ExtResource( 136 ), ExtResource( 137 ), ExtResource( 138 ), ExtResource( 139 ), ExtResource( 140 ) ],
"loop": false,
"name": "Born",
"speed": 30.0
} ]

[node name="Portal" type="Node2D"]
script = ExtResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/OpenPortal = SubResource( 1 )
anims/SpitPotions = SubResource( 2 )

[node name="Sprite" type="AnimatedSprite" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
rotation = 1.5708
scale = Vector2( 0.1, 0.1 )
frames = SubResource( 3 )
animation = "Born"

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 2, -160 )
texture = ExtResource( 141 )
mode = 2
range_item_cull_mask = 2

[node name="LightRef" type="Sprite" parent="."]
visible = false
modulate = Color( 0.709804, 0.203922, 0.203922, 1 )
position = Vector2( 2, -160 )
texture = ExtResource( 141 )

[node name="TargetPoints" type="Node2D" parent="."]
editor/display_folded = true

[node name="A" type="Position2D" parent="TargetPoints"]
position = Vector2( -60, -150 )

[node name="B" type="Position2D" parent="TargetPoints"]
position = Vector2( 2.65, -210 )

[node name="C" type="Position2D" parent="TargetPoints"]
position = Vector2( 20, -90 )

[node name="D" type="Position2D" parent="TargetPoints"]
position = Vector2( 70, -160 )

[node name="OriginPoints" type="Node2D" parent="."]
editor/display_folded = true

[node name="A" type="Position2D" parent="OriginPoints"]
position = Vector2( -52, 110 )

[node name="B" type="Position2D" parent="OriginPoints"]
position = Vector2( -22, 120 )

[node name="C" type="Position2D" parent="OriginPoints"]
position = Vector2( 18, 120 )

[node name="D" type="Position2D" parent="OriginPoints"]
position = Vector2( 48, 110 )
